# warp-static-server

./: Cargo.toml  readme.md
src/: main.rs
static/: index.html  main.js
