[package]
name = "warp-static-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.22.0", features = ["full"] }
warp = "0.3.3"
